# emojifinder

./: README.md  pyproject.toml
src/emojifinder/: __main__.py
src/textual-emojifinder/: __main__.py
