[project]
name = "emojifinder"
version = "0.1"
authors = [
  { name="Thomas Crha", email="thomas@9bitbyte.com" },
]
description = "A cli interface for finding emojis using the [emojifinder.com](https://emojifinder.com) 'API'."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
]

[project.scripts]
emojifinder = "src:emojifinder:__main__.main"

[project.urls]
"Homepage" = "https://github.com/thomascrha/emojifinder"
"Bug Tracker" = "https://github.com/thomascrha/emojifinder/issues"

[project.optional-dependencies]
test = [
    "black",
    "pre-commit",
    "mypy",
    "pytest",
    "pytest-cov",
]

deploy = [
    "build",
    "twine",
    "setuptools>=61.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
src_paths = ["src"]
lines_between_sections = 0
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
skip_glob = '*/.ipynb_checkpoints/*'

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git |
    \.hg |
    \.mypy_cache |
    \.tox |
    \.venv |
    _build |
    buck-out |
    build |
    dist
)/
'''
